src/parser.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program ENDF

    1 program: BEGIN func_list statement_seq END

    2 func_list: %empty
    3          | func_list function_declaration

    4 function_declaration: type ident LPAREN RPAREN IS statement_seq END
    5                     | type ident LPAREN param_list RPAREN IS statement_seq END

    6 param_list: param
    7           | param_list COMMA param

    8 param: type ident

    9 statement_seq: statement
   10              | statement_seq SEMICOLON statement

   11 statement: SKIP
   12          | RETURN expr
   13          | type ident ASSIGN assign_rhs
   14          | assign_lhs ASSIGN assign_rhs
   15          | READ assign_lhs
   16          | FREE expr
   17          | EXIT expr
   18          | PRINT expr
   19          | PRINTLN expr
   20          | BEGIN statement_seq END
   21          | IF expr THEN statement_seq ELSE statement_seq FI
   22          | WHILE expr DO statement_seq DONE

   23 assign_lhs: ident
   24           | array_elem_lhs
   25           | pair_elem_lhs

   26 assign_rhs: expr
   27           | array_liter
   28           | NEWPAIR LPAREN expr COMMA expr RPAREN
   29           | pair_elem_rhs
   30           | CALL ident LPAREN RPAREN
   31           | CALL ident LPAREN arg_list RPAREN

   32 arg_list: expr
   33         | arg_list COMMA expr

   34 pair_elem_rhs: FST expr
   35              | SND expr

   36 pair_elem_lhs: FST expr
   37              | SND expr

   38 type: base_type
   39     | array_type
   40     | pair_type

   41 base_type: INT
   42          | BOOL
   43          | CHAR
   44          | STRING

   45 array_type: type LSQUARE RSQUARE

   46 pair_type: PAIR LPAREN pair_elem_type COMMA pair_elem_type RPAREN

   47 pair_elem_type: base_type
   48               | array_type
   49               | PAIR

   50 expr: int_liter
   51     | bool_liter
   52     | char_liter
   53     | str_liter
   54     | pair_liter
   55     | ident
   56     | array_elem_exp
   57     | unary_op
   58     | binary_op
   59     | LPAREN expr RPAREN

   60 unary_op: BANG expr
   61         | LEN expr
   62         | ORD expr
   63         | CHR expr
   64         | MINUS expr

   65 binary_op: expr STAR expr
   66          | expr SLASH expr
   67          | expr MODULO expr
   68          | expr PLUS expr
   69          | expr MINUS expr
   70          | expr GREATER expr
   71          | expr GREATEREQUALS expr
   72          | expr LESS expr
   73          | expr LESSEQUALS expr
   74          | expr EQUALS expr
   75          | expr NOTEQUALS expr
   76          | expr LOGAND expr
   77          | expr LOGOR expr

   78 ident: IDENTIFIER

   79 array_elem_exp: ident array_index

   80 array_elem_lhs: ident array_index

   81 array_index: LSQUARE expr RSQUARE
   82            | array_index LSQUARE expr RSQUARE

   83 int_liter: int_sign INTEGER

   84 int_sign: %empty
   85         | PLUS

   86 bool_liter: TRUE
   87           | FALSE

   88 char_liter: CHARLIT

   89 str_liter: STRINGLIT

   90 array_liter: LSQUARE expr_list RSQUARE

   91 expr_list: %empty
   92          | expr
   93          | expr_list COMMA expr

   94 pair_liter: NULLTOKEN


Terminals, with rules where they appear

ENDF (0) 0
error (256)
BEGIN (258) 1 20
END (259) 1 4 5 20
IF (260) 21
THEN (261) 21
ELSE (262) 21
FI (263) 21
WHILE (264) 22
DO (265) 22
DONE (266) 22
SKIP (267) 11
FREE (268) 16
EXIT (269) 17
TRUE (270) 86
FALSE (271) 87
IS (272) 4 5
RETURN (273) 12
CALL (274) 30 31
PAIR (275) 46 49
INT (276) 41
BOOL (277) 42
CHAR (278) 43
STRING (279) 44
NULLTOKEN (280) 94
ASSIGN (281) 13 14
LOGOR (282) 77
LOGAND (283) 76
STAR (284) 65
SLASH (285) 66
MODULO (286) 67
PLUS (287) 68 85
MINUS (288) 64 69
LESS (289) 72
LESSEQUALS (290) 73
GREATER (291) 70
GREATEREQUALS (292) 71
EQUALS (293) 74
NOTEQUALS (294) 75
BANG (295) 60
LEN (296) 61
ORD (297) 62
CHR (298) 63
LPAREN (299) 4 5 28 30 31 46 59
RPAREN (300) 4 5 28 30 31 46 59
LSQUARE (301) 45 81 82 90
RSQUARE (302) 45 81 82 90
SEMICOLON (303) 10
COMMA (304) 7 28 33 46 93
PRINT (305) 18
PRINTLN (306) 19
READ (307) 15
NEWPAIR (308) 28
FST (309) 34 36
SND (310) 35 37
ERROR (311)
IDENTIFIER (312) 78
STRINGLIT (313) 89
CHARLIT (314) 88
INTEGER (315) 83
UMINUS (316)
UPLUS (317)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
func_list (65)
    on left: 2 3, on right: 1 3
function_declaration (66)
    on left: 4 5, on right: 3
param_list (67)
    on left: 6 7, on right: 5 7
param (68)
    on left: 8, on right: 6 7
statement_seq (69)
    on left: 9 10, on right: 1 4 5 10 20 21 22
statement (70)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22, on right: 9 10
assign_lhs (71)
    on left: 23 24 25, on right: 14 15
assign_rhs (72)
    on left: 26 27 28 29 30 31, on right: 13 14
arg_list (73)
    on left: 32 33, on right: 31 33
pair_elem_rhs (74)
    on left: 34 35, on right: 29
pair_elem_lhs (75)
    on left: 36 37, on right: 25
type (76)
    on left: 38 39 40, on right: 4 5 8 13 45
base_type (77)
    on left: 41 42 43 44, on right: 38 47
array_type (78)
    on left: 45, on right: 39 48
pair_type (79)
    on left: 46, on right: 40
pair_elem_type (80)
    on left: 47 48 49, on right: 46
expr (81)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 12 16 17 18 19
    21 22 26 28 32 33 34 35 36 37 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 81 82 92 93
unary_op (82)
    on left: 60 61 62 63 64, on right: 57
binary_op (83)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76 77, on right: 58
ident (84)
    on left: 78, on right: 4 5 8 13 23 30 31 55 79 80
array_elem_exp (85)
    on left: 79, on right: 56
array_elem_lhs (86)
    on left: 80, on right: 24
array_index (87)
    on left: 81 82, on right: 79 80 82
int_liter (88)
    on left: 83, on right: 50
int_sign (89)
    on left: 84 85, on right: 83
bool_liter (90)
    on left: 86 87, on right: 51
char_liter (91)
    on left: 88, on right: 52
str_liter (92)
    on left: 89, on right: 53
array_liter (93)
    on left: 90, on right: 27
expr_list (94)
    on left: 91 92 93, on right: 90 93
pair_liter (95)
    on left: 94, on right: 54


State 0

    0 $accept: . program ENDF

    BEGIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: BEGIN . func_list statement_seq END

    $default  reduce using rule 2 (func_list)

    func_list  go to state 3


State 2

    0 $accept: program . ENDF

    ENDF  shift, and go to state 4


State 3

    1 program: BEGIN func_list . statement_seq END
    3 func_list: func_list . function_declaration

    BEGIN       shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    SKIP        shift, and go to state 8
    FREE        shift, and go to state 9
    EXIT        shift, and go to state 10
    RETURN      shift, and go to state 11
    PAIR        shift, and go to state 12
    INT         shift, and go to state 13
    BOOL        shift, and go to state 14
    CHAR        shift, and go to state 15
    STRING      shift, and go to state 16
    PRINT       shift, and go to state 17
    PRINTLN     shift, and go to state 18
    READ        shift, and go to state 19
    FST         shift, and go to state 20
    SND         shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    function_declaration  go to state 23
    statement_seq         go to state 24
    statement             go to state 25
    assign_lhs            go to state 26
    pair_elem_lhs         go to state 27
    type                  go to state 28
    base_type             go to state 29
    array_type            go to state 30
    pair_type             go to state 31
    ident                 go to state 32
    array_elem_lhs        go to state 33


State 4

    0 $accept: program ENDF .

    $default  accept


State 5

   20 statement: BEGIN . statement_seq END

    BEGIN       shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    SKIP        shift, and go to state 8
    FREE        shift, and go to state 9
    EXIT        shift, and go to state 10
    RETURN      shift, and go to state 11
    PAIR        shift, and go to state 12
    INT         shift, and go to state 13
    BOOL        shift, and go to state 14
    CHAR        shift, and go to state 15
    STRING      shift, and go to state 16
    PRINT       shift, and go to state 17
    PRINTLN     shift, and go to state 18
    READ        shift, and go to state 19
    FST         shift, and go to state 20
    SND         shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    statement_seq   go to state 34
    statement       go to state 25
    assign_lhs      go to state 26
    pair_elem_lhs   go to state 27
    type            go to state 35
    base_type       go to state 29
    array_type      go to state 30
    pair_type       go to state 31
    ident           go to state 32
    array_elem_lhs  go to state 33


State 6

   21 statement: IF . expr THEN statement_seq ELSE statement_seq FI

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 48
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 7

   22 statement: WHILE . expr DO statement_seq DONE

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 59
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 8

   11 statement: SKIP .

    $default  reduce using rule 11 (statement)


State 9

   16 statement: FREE . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 60
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 10

   17 statement: EXIT . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 61
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 11

   12 statement: RETURN . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 62
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 12

   46 pair_type: PAIR . LPAREN pair_elem_type COMMA pair_elem_type RPAREN

    LPAREN  shift, and go to state 63


State 13

   41 base_type: INT .

    $default  reduce using rule 41 (base_type)


State 14

   42 base_type: BOOL .

    $default  reduce using rule 42 (base_type)


State 15

   43 base_type: CHAR .

    $default  reduce using rule 43 (base_type)


State 16

   44 base_type: STRING .

    $default  reduce using rule 44 (base_type)


State 17

   18 statement: PRINT . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 64
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 18

   19 statement: PRINTLN . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 65
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 19

   15 statement: READ . assign_lhs

    FST         shift, and go to state 20
    SND         shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    assign_lhs      go to state 66
    pair_elem_lhs   go to state 27
    ident           go to state 32
    array_elem_lhs  go to state 33


State 20

   36 pair_elem_lhs: FST . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 67
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 21

   37 pair_elem_lhs: SND . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 68
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 22

   78 ident: IDENTIFIER .

    $default  reduce using rule 78 (ident)


State 23

    3 func_list: func_list function_declaration .

    $default  reduce using rule 3 (func_list)


State 24

    1 program: BEGIN func_list statement_seq . END
   10 statement_seq: statement_seq . SEMICOLON statement

    END        shift, and go to state 69
    SEMICOLON  shift, and go to state 70


State 25

    9 statement_seq: statement .

    $default  reduce using rule 9 (statement_seq)


State 26

   14 statement: assign_lhs . ASSIGN assign_rhs

    ASSIGN  shift, and go to state 71


State 27

   25 assign_lhs: pair_elem_lhs .

    $default  reduce using rule 25 (assign_lhs)


State 28

    4 function_declaration: type . ident LPAREN RPAREN IS statement_seq END
    5                     | type . ident LPAREN param_list RPAREN IS statement_seq END
   13 statement: type . ident ASSIGN assign_rhs
   45 array_type: type . LSQUARE RSQUARE

    LSQUARE     shift, and go to state 72
    IDENTIFIER  shift, and go to state 22

    ident  go to state 73


State 29

   38 type: base_type .

    $default  reduce using rule 38 (type)


State 30

   39 type: array_type .

    $default  reduce using rule 39 (type)


State 31

   40 type: pair_type .

    $default  reduce using rule 40 (type)


State 32

   23 assign_lhs: ident .
   80 array_elem_lhs: ident . array_index

    LSQUARE  shift, and go to state 74

    $default  reduce using rule 23 (assign_lhs)

    array_index  go to state 75


State 33

   24 assign_lhs: array_elem_lhs .

    $default  reduce using rule 24 (assign_lhs)


State 34

   10 statement_seq: statement_seq . SEMICOLON statement
   20 statement: BEGIN statement_seq . END

    END        shift, and go to state 76
    SEMICOLON  shift, and go to state 70


State 35

   13 statement: type . ident ASSIGN assign_rhs
   45 array_type: type . LSQUARE RSQUARE

    LSQUARE     shift, and go to state 72
    IDENTIFIER  shift, and go to state 22

    ident  go to state 77


State 36

   86 bool_liter: TRUE .

    $default  reduce using rule 86 (bool_liter)


State 37

   87 bool_liter: FALSE .

    $default  reduce using rule 87 (bool_liter)


State 38

   94 pair_liter: NULLTOKEN .

    $default  reduce using rule 94 (pair_liter)


State 39

   85 int_sign: PLUS .

    $default  reduce using rule 85 (int_sign)


State 40

   64 unary_op: MINUS . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 78
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 41

   60 unary_op: BANG . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 79
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 42

   61 unary_op: LEN . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)

    expr            go to state 80
    unary_op        go to state 49
    binary_op       go to state 50
    ident           go to state 51
    array_elem_exp  go to state 52
    int_liter       go to state 53
    int_sign        go to state 54
    bool_liter      go to state 55
    char_liter      go to state 56
    str_liter       go to state 57
    pair_liter      go to state 58


State 43

   62 unary_op: ORD . expr

    TRUE        shift, and go to state 36
    FALSE       shift, and go to state 37
    NULLTOKEN   shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    BANG        shift, and go to state 41
    LEN         shift, and go to state 42
    ORD         shift, and go to state 43
    CHR         shift, and go to state 44
    LPAREN      shift, and go to state 45
    IDENTIFIER  shift, and go to state 22
    STRINGLIT   shift, and go to state 46
    CHARLIT     shift, and go to state 47

    $default  reduce using rule 84 (int_sign)
